location/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: location
  labels:
    app: location
spec:
  ports:
    - port: 8080
      name: location-port
  selector:
    app: location
